--- a/public/actividades/actividad.html
+++ b/public/actividades/actividad.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <!-- Creado con Storyline 360 - http://www.articulate.com  -->
   <!-- version: 3.75.30269.0 -->
-  <title>Planificaci&#243;n y evaluaci&#243;n del desempe&#241;o del sistema de gesti&#243;n de la energ&#237;a</title>
+  <title>Actividad didáctica</title>
   <meta http-equiv="x-ua-compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,shrink-to-fit=no,minimal-ui"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
